--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="dp2.jpg">
+              <a href="images/dp2.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/dp2.jpg" class="hoverZoomLink"></a>              
             </td>
           </tr>
         </table>
