--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I'm interested in computer vision, machine learning, optimization, graphics and robotics.
+                I'm interested in robotics, optimization, phyics simulation and dynamical systems.
               </p>
             </td>
           </tr>
@@ -66,7 +66,7 @@
           {% if cat == 'research' %}
           <tr>
             <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
-              <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
+              <a img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" /></a>
             </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
               <h3>{{post.title}}</h3>
