--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,14 +59,14 @@
             </td>
           </tr>
         </table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           {% for post in site.posts %}
           {% for cat in post.categories %}
           {% if cat == 'research' %}
           <tr>
             <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
-              <a img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" ></a>
+              <a href="{{posts.image}}"></a>img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" ></a>
             </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
               <h3>{{post.title}}</h3>
