--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/dp2.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/dp2.jpg" class="hoverZoomLink"></a>              
+              <a href="images/dp2.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/dp2.jpg" class="hoverZoomLink"/></a>              
             </td>
           </tr>
         </table>
@@ -66,7 +66,7 @@
           {% if cat == 'research' %}
           <tr>
             <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
-              <a href="{{posts.image}}"></a>img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" ></a>
+              <a href="{{posts.image}}"><img src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" /></a>
             </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
               <h3>{{post.title}}</h3>
