--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
           {% if cat == 'research' %}
           <tr>
             <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
-              <a href="{{posts.image}}"><img src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" /></a>
+              <a href="{{post.image}}"><img src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" /></a>
             </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
               <h3>{{post.title}}</h3>
