--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,10 +37,11 @@
                 I have an B.Sc in Mechanical Engineering from <a href="https://www.neduet.edu.pk/">NED University of Engineering and Technology</a>, where I work as a research assistant at Department of Mechanical Engineering under supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>, working on numerial investigation of methods for heat transfer enhancement through jet impingment <a href="https://doi.org/10.1002/htj.21986">[1]</a>, <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>.
               </p>
               <p style="text-align:center">
-                <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp;
+                <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank">Email</a> &nbsp|&nbsp
                 <a href="https://github.com/rafaymhddn">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/rafaymohiuddin/"> LinkedIn </a>
+                <a href="https://drive.google.com/file/d/1fr6ufcUtGAbgSvX5ICJvp33_EEHiykUq/view" target="_blank" >Resume</a> &nbsp|&nbsp
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -59,6 +60,8 @@
             </td>
           </tr>
         </table>
+
+<!-- Publications -->
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           {% for post in site.posts %}
@@ -102,6 +105,9 @@
         <br>
         <br>
         <br>
+
+<!-- Intell Projects -->
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
@@ -169,6 +175,9 @@
         <br>
         <br>
         <br>
+
+<!-- Other Projects -->        
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
