--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,11 +37,11 @@
                 I have an B.Sc in Mechanical Engineering from <a href="https://www.neduet.edu.pk/">NED University of Engineering and Technology</a>, where I work as a research assistant at Department of Mechanical Engineering under supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>, working on numerial investigation of methods for heat transfer enhancement through jet impingment <a href="https://doi.org/10.1002/htj.21986">[1]</a>, <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>.
               </p>
               <p style="text-align:center">
-                <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank">Email</a> &nbsp|&nbsp
+                <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank">Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/rafaymhddn">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/rafaymohiuddin/"> LinkedIn </a>
-                <a href="https://drive.google.com/file/d/1fr6ufcUtGAbgSvX5ICJvp33_EEHiykUq/view" target="_blank" >Resume</a> &nbsp|&nbsp
+                <a href="https://www.linkedin.com/in/rafaymohiuddin/"> LinkedIn</a> &nbsp;/&nbsp;
+                <a href="https://drive.google.com/file/d/1fr6ufcUtGAbgSvX5ICJvp33_EEHiykUq/view" target="_blank"> CV</a> 
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
