--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,44 @@
               <h1>
                 Rafay Mohiuddin
               </h1>
+
+                              <!-- Name tab -->
+                              <table border=0 class="bg_colour" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                    
+                    
+                                <tr style="padding:0px">
+                                    <td style="padding:2.5%;width:20%;max-width:20%">
+                                        <a href="images/pp2.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/pp2.jpg" class="img-circle"></a>
+                                    </td>
+                                    <td style="padding:2.5%;width:60%;vertical-align:middle">
+                                        <p style="text-align:center">
+                                            <h1  style="text-align:center"><name>Amish Mittal</name></h1>
+                                        </p>
+                                        <p style="text-align:center">
+                                        &nbsp|&nbsp
+                                        <a href="#news" onclick=Expand("news")>News</a>
+                                        &nbsp|&nbsp
+                                        <a href="#education" onclick=Expand("education")>Education</a>
+                                        &nbsp|&nbsp
+                                        <a href="#experience" onclick=Expand("experience")>Experience</a>
+                                        &nbsp|&nbsp
+                                        <a href="#publications" onclick=Expand("publications")>Publications</a>
+                                        &nbsp|&nbsp
+                                        <a href="#projects" onclick=Expand("projects")>Projects</a>
+                                        &nbsp|&nbsp
+                                        <a href="mailto:amishmittal@outlook.com">Contact</a>
+                                        &nbsp|&nbsp
+                                        <a href="https://blog.amishmittal.com/">Blog</a>
+                                        &nbsp|&nbsp
+                                        </p>
+                                    </td>
+                                    <td style="padding:2.5%;width:10%;max-width:10%">
+            
+                                    </td>
+                                </tr>
+            
+                            </tbody></table>
+
               <p>UNDER DEVELOPMENT
               <p>I am a M.Sc student majoring in the area of Computational Modeling and Simulation, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, part of the <a href="https://www.tum.de/en/">Technical University of Muncih</a>. I am also working as a student research assistant at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on robtics, 3D scanning and mapping system.
               </p>
