--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,12 +24,9 @@
 
                               <!-- Name tab -->
                               <table border=0 class="bg_colour" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
-                                <tr style="padding:0px">
-                                    
+                                <tr style="text-align: center">                                    
                                     <td style="padding:2.5%;width:60%;vertical-align:middle">
                                         <p style="text-align:center">
-                                        &nbsp;/&nbsp;
                                         <a href="#news" onclick=Expand("news")>News</a>
                                         &nbsp;/&nbsp;
                                         <a href="#education" onclick=Expand("education")>Education</a>
@@ -41,16 +38,11 @@
                                         <a href="#projects" onclick=Expand("projects")>Projects</a>
                                         &nbsp;/&nbsp;
                                         <a href="mailto:amishmittal@outlook.com">Contact</a>
-                                        &nbsp;/&nbsp;
-                                        <a href="https://blog.amishmittal.com/">Blog</a>
-                                        &nbsp;/&nbsp;
                                         </p>
                                     </td>
-                                    <td style="padding:2.5%;width:10%;max-width:10%">
-            
+                                        <td style="padding:2.5%;width:10%;max-width:10%">
                                     </td>
-                                </tr>
-            
+                                </tr>            
                               </table>        
 
 
