--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,28 +22,28 @@
     <tr style="padding:0px">
       <td style="padding:0px">
 
-                              <!-- Name tab -->
-                              <table border=0 class="bg_colour" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-                                <tr style="text-align: center">                                    
-                                    <td style="padding:2.5%;width:60%;vertical-align:middle">
-                                        <p style="text-align:center">
-                                        <a href="#news" onclick=Expand("news")>News</a>
-                                        &nbsp;/&nbsp;
-                                        <a href="#education" onclick=Expand("education")>Education</a>
-                                        &nbsp;/&nbsp;
-                                        <a href="#experience" onclick=Expand("experience")>Experience</a>
-                                        &nbsp;/&nbsp;
-                                        <a href="#publications" onclick=Expand("publications")>Publications</a>
-                                        &nbsp;/&nbsp;
-                                        <a href="#projects" onclick=Expand("projects")>Projects</a>
-                                        &nbsp;/&nbsp;
-                                        <a href="mailto:amishmittal@outlook.com">Contact</a>
-                                        </p>
-                                    </td>
-                                        <td style="padding:2.5%;width:10%;max-width:10%">
-                                    </td>
-                                </tr>            
-                              </table>        
+<!-- Name tab -->
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr style="padding:0px">                                    
+            <td style="padding:2.5%;width:60%;vertical-align:middle">
+              <p style="text-align:center">
+                <a href="#news" onclick=Expand("news")>News</a>
+                &nbsp;/&nbsp;
+                <a href="#education" onclick=Expand("education")>Education</a>
+                nbsp;/&nbsp;
+                <a href="#experience" onclick=Expand("experience")>Experience</a>
+                &nbsp;/&nbsp;
+                <a href="#publications" onclick=Expand("publications")>Publications</a>
+                &nbsp;/&nbsp;
+                <a href="#projects" onclick=Expand("projects")>Projects</a>
+                &nbsp;/&nbsp;
+                <a href="mailto:amishmittal@outlook.com">Contact</a>
+              </p>
+            </td>
+              <td style="padding:2.5%;width:10%;max-width:10%">
+            </td>
+          </tr>            
+        </table>        
 
 
 
