--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,12 @@
 <!-- Name tab -->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">                                    
-            <td style="padding:2.5%;width:60%;vertical-align:middle">
+            <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
                 <a href="#news" onclick=Expand("news")>News</a>
                 &nbsp;/&nbsp;
                 <a href="#education" onclick=Expand("education")>Education</a>
-                nbsp;/&nbsp;
+                &nbsp;/&nbsp;
                 <a href="#experience" onclick=Expand("experience")>Experience</a>
                 &nbsp;/&nbsp;
                 <a href="#publications" onclick=Expand("publications")>Publications</a>
@@ -40,12 +40,10 @@
                 <a href="mailto:amishmittal@outlook.com">Contact</a>
               </p>
             </td>
-              <td style="padding:2.5%;width:10%;max-width:10%">
-            </td>
           </tr>            
         </table>        
 
-
+<!-- Introduction -->
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr style="padding:0px">
