--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,8 @@
     <tr style="padding:0px">
       <td style="padding:0px">
 
-<!-- Name tab -->
+<!-- Section Tab -->
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">                                    
             <td style="padding:2.5%;width:63%;vertical-align:middle">
@@ -41,7 +42,18 @@
               </p>
             </td>
           </tr>            
-        </table>        
+        </table>
+
+<!-- Name -->
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr style="padding:0px">                                    
+            <td style="padding:2.5%;width:63%;vertical-align:middle">
+              <p style="text-align:center">
+                <h1  style="text-align:center"><name>Rafay Mohiuddin</name></h1>
+              </p>
+            </td>
+          </tr>            
+        </table>
 
 <!-- Introduction -->
 
