--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,11 +61,11 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:60%;vertical-align:middle">
             
-              <p>UNDER DEVELOPMENT
+              <p>
               <p>I am a M.Sc student majoring in the area of Computational Modeling and Simulation, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, part of the <a href="https://www.tum.de/en/">Technical University of Muncih</a>. I am also working as a student research assistant at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on robtics, 3D scanning and mapping system.
               </p>
               <p>
-                From Jul,2020 to Oct,2021, I worked at <a href="https://nust.edu.pk/">National University of Science and Technology</a>, as part of <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a>. I primarily worked in devlopment of design and development of drones (fixed wing UAV and VTOLS) for urban survalence, Additionally I worked on tuning flight controlled through software in the loop(SITL) simulation.
+                From Jul,2020 to Oct,2021, I worked at <a href="https://nust.edu.pk/">National University of Science and Technology</a>, as part of <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a>. I primarily worked in devlopment of design and development of drones (fixed wing UAV and VTOL) for urban survalence, Additionally I worked on tuning flight controlled through software in the loop(SITL) simulation.
               </p>
               <p>
                 I have an B.Sc in Mechanical Engineering from <a href="https://www.neduet.edu.pk/">NED University of Engineering and Technology</a>, where I work as a research assistant at Department of Mechanical Engineering under supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>, working on numerial investigation of methods for heat transfer enhancement through jet impingment <a href="https://doi.org/10.1002/htj.21986">[1]</a>, <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>.
