--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,8 +61,9 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:60%;vertical-align:middle">
             
-              <p>
-              <p>I am a M.Sc student majoring in the area of Computational Modeling and Simulation, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, part of the <a href="https://www.tum.de/en/">Technical University of Muncih</a>. I am also working as a student research assistant at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on robtics, 3D scanning and mapping system.
+              <p>   
+              </p>
+              <p>I am a M.Sc student majoring in the area of Computational Modeling and Simulation, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, part of the <a href="https://www.tum.de/en/">Technical University of Muncih</a>. I am also working as a student research assistant at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on robtics 3D scanning and mapping system.
               </p>
               <p>
                 From Jul,2020 to Oct,2021, I worked at <a href="https://nust.edu.pk/">National University of Science and Technology</a>, as part of <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a>. I primarily worked in devlopment of design and development of drones (fixed wing UAV and VTOL) for urban survalence, Additionally I worked on tuning flight controlled through software in the loop(SITL) simulation.
@@ -84,6 +85,44 @@
           </tr>
         </table>
 
+<!-- Education -->
+
+<button style="border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education"><heading>Education</heading></button>
+<div id="content-education" class="collapse in">
+
+<table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
+
+    <tr>
+        <td style="padding:10px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src='images/tum.png' width="110" class="side-image">
+            </div>
+        </td>
+        <td style="padding:10px;width:75%;vertical-align:top">
+            <!-- <papertitle style="color:gray"><big>Software Development Engineer Intern</big> </papertitle> <papertitle ><big> | Expedia Group</big></papertitle> -->
+            <papertitle><big>Technical University of Munich</big></papertitle>
+            <br>
+            <papertitle style="color:gray"><big>Masters of Science </big></papertitle><papertitle><big>Computational Mechanics</big></papertitle>
+            <br>
+            Oct '21 - Present
+            <br>
+            <p>
+                Course Work:
+                <ul>
+                    <li>Computation: Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab - Autonomous Applications, Software Lab - Optical Process Control</li>
+                    <li>Mechanics: 1. Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics   </li>
+                </ul>
+            </p>
+        </td>
+    </tr>
+
+</tbody></table>
+</div>
+<hr class="soft">
+
+
+
+        
 <!-- Publications -->
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
