--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
 
 <!-- Education -->
 
-<button style="border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education"><heading>Education</heading></button>
+<button style="border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education"><h2>Education</h2></button>
 <div id="content-education" class="collapse in">
 
 <table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
@@ -95,7 +95,7 @@
     <tr>
         <td style="padding:10px;width:25%;vertical-align:middle">
             <div class="one">
-                <img src='images/tum.png' width="110" class="side-image">
+                <img src='images/tum-logo.png' width="150" class="side-image">
             </div>
         </td>
         <td style="padding:10px;width:75%;vertical-align:top">
