--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,13 @@
 
 <!-- Education -->
 
-<button style="width:100%;border:0px transparent;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education"><h2>Education</h2></button>
+<button style="width:100%;border:0px transparent;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
+  <tr>
+    <td style="padding:2.5%;width:100%;vertical-align:middle">
+      <h2>Education</h2>
+    </td>
+  </tr>  
+</button>
 <div id="content-education" class="collapse in">
 
 <table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
@@ -109,8 +115,8 @@
             <p>
                 Course Work:
                 <ul>
-                    <li><b>Computation:</b>> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab - Autonomous Applications, Software Lab - Optical Process Control</li>
-                    <li><b>Mechanics:</b>> Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics   </li>
+                    <li><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab - Autonomous Applications, Software Lab - Optical Process Control</li>
+                    <li><b>Mechanics:</b> Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics   </li>
                 </ul>
             </p>
         </td>
