--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,12 +87,8 @@
 
 <!-- Education -->
 
-<button style="width:100%;border:0px transparent;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
-  <tr>
-    <td style="padding:2.5%;width:100%;vertical-align:middle">
+<button style="padding:2.5%;width:100%;border:0px transparent;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
       <h2>Education</h2>
-    </td>
-  </tr>  
 </button>
 <div id="content-education" class="collapse in">
 
