--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,11 +84,12 @@
             </td>
           </tr>
         </table>
+        <hr class="soft">
 
 <!-- Education -->
 
-<button style="padding:2.5%;width:100%;border:0px transparent;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
-      <h2>Education</h2>
+<button style="border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
+  <h2>Education</h2>
 </button>
 <div id="content-education" class="collapse in">
 
