--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@
 
 <!-- Education -->
 
-<button style="border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
+<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
   <h2>Education</h2>
 </button>
 <div id="content-education" class="collapse in">
