--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,6 +119,29 @@
         </td>
     </tr>
 
+    <tr>
+      <td style="padding:10px;width:25%;vertical-align:middle">
+          <div class="one">
+              <img src='images/ned-logo.png' width="150" class="side-image">
+          </div>
+      </td>
+      <td style="padding:10px;width:75%;vertical-align:top">
+          <!-- <papertitle style="color:gray"><big>Software Development Engineer Intern</big> </papertitle> <papertitle ><big> | Expedia Group</big></papertitle> -->
+          <papertitle><big>NED University of Engineering and Technology</big></papertitle>
+          <br>
+          <papertitle style="color:gray"><big>Bachelors of Science </big></papertitle><papertitle><big>Mechanical Engineering</big></papertitle>
+          <br>
+          Dec 2015 - Sep 2019
+          <br>
+          <p>
+              Thesis
+              <ul>
+                  <li>Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets</li>
+              </ul>
+          </p>
+      </td>
+  </tr>
+
 </tbody></table>
 </div>
 <hr class="soft">
