--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,7 +103,7 @@
         </td>
         <td style="padding:10px;width:75%;vertical-align:top">
             <!-- <papertitle style="color:gray"><big>Software Development Engineer Intern</big> </papertitle> <papertitle ><big> | Expedia Group</big></papertitle> -->
-            <papertitle><big>Technical University of Munich</big></papertitle>
+            <papertitle><big><b>Technical University of Munich</b>></big></papertitle>
             <br>
             <papertitle style="color:gray"><big>Masters of Science </big></papertitle><papertitle><big>Computational Mechanics</big></papertitle>
             <br>
@@ -127,17 +127,14 @@
       </td>
       <td style="padding:10px;width:75%;vertical-align:top">
           <!-- <papertitle style="color:gray"><big>Software Development Engineer Intern</big> </papertitle> <papertitle ><big> | Expedia Group</big></papertitle> -->
-          <papertitle><big>NED University of Engineering and Technology</big></papertitle>
+          <papertitle><big><b>NED University of Engineering and Technology</b>></big></papertitle>
           <br>
           <papertitle style="color:gray"><big>Bachelors of Science </big></papertitle><papertitle><big>Mechanical Engineering</big></papertitle>
           <br>
           Dec 2015 - Sep 2019
           <br>
           <p>
-              Thesis
-              <ul>
-                  <li>Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets</li>
-              </ul>
+              <b>Thesis:</b>> Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets <a href="https://doi.org/10.1002/htj.21986">[paper 1]</a>, <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[paper 2]</a>.              
           </p>
       </td>
   </tr>
