--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
             <td style="padding:2.5%;width:60%;vertical-align:middle">
             
               <br>
-              <p align="justify">I am a Masters student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, part of the <a href="https://www.tum.de/en/">Technical University of Muncih</a>. I am also working as a student research assistant at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on methods for 3D scanning and mapping along with thier implimentation using robots.
+              <p align="justify">I am a Masters student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, part of the <a href="https://www.tum.de/en/">Technical University of Muncih</a>. I am also working as a student research assistant at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on methods for 3D scanning and mapping along with thier implimentation using different robotics systems.
               </p>
               <p align="justify">
                 From Jul,2020 to Oct,2021, I worked at <a href="https://nust.edu.pk/">National University of Science and Technology</a>, as part of <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a>. I primarily worked on the design and development of drones (fixed wing and vertical take of and landing aerial vehicles) for urban environments. Additionally I also worked on development of models for flight simulator and tuning flight controlled through software-in-loop simulation.
