--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,8 +111,8 @@
             <p align="justify">
                 Course Work:
                 <ul>
-                    <li><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab - Autonomous Applications, Software Lab - Optical Process Control</li>
-                    <li><b>Mechanics:</b> Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics   </li>
+                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab - Autonomous Applications, Software Lab - Optical Process Control</li>
+                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics   </li>
                 </ul>
             </p>
         </td>
