--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">                                    
-            <td style="padding:1.5%;width:63%;vertical-align:middle">
+            <td style="padding:0.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
                 <a href="#news" onclick=Expand("news")>News</a>
                 &nbsp;/&nbsp;
@@ -47,9 +47,9 @@
 <!-- Name -->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">                                    
-            <td style="padding:1.5%;width:63%;vertical-align:middle">
+            <td style="padding:1%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <h1  style="text-align:center"><name>Rafay Mohiuddin</name></h1>
+                <h1  style="text-align:center"><name>Rafay Mohiuddin (Under Development)</name></h1>
               </p>
             </td>
           </tr>            
