--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -141,6 +141,71 @@
 </div>
 <hr class="soft">
 
+<!-- Experience -->
+
+<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
+  <h2>Experience</h2>
+</button>
+<div id="content-education" class="collapse in">
+
+<table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
+
+    <tr>
+        <td style="padding:10px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src='images/tum-logo.png' width="110" class="side-image">
+            </div>
+        </td>
+        <td style="padding:10px;width:75%;vertical-align:top">
+           
+            <papertitle><big><b>Technical University of Munich</b></big></papertitle>
+            <br>
+            <papertitle style="color:gray"><big>Research Assistant (HiWi)</big></papertitle><papertitle><big>Chair of Computational Modeling and Simulation</big></papertitle>
+            <br>
+            Oct 2021 - Present
+            <br>
+            <p align="justify">
+              Working as HiWi for development of mapping system using LiDAR and RGBD cameras at <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
+                <ul>
+                    <li align="justify"><b>Consolidated workflow for evaluating extrinsic camera parameters for spinning lidar and camera calibration, in absence of reference.</li>
+                    <li align="justify"><b>Implemented libraries for SLAM implementation on LiDAR. Updated code to support Ouster and Robosense LiDAR.</li>
+                    <li align="justify"><b>Working on dockerized implementation of libraries, sensor communication
+                      at distance using nimbro-network, and mobile deployment of mapping system utilizing GO1 robot.</li>
+                </ul>
+            </p>
+        </td>
+    </tr>
+
+    <tr>
+      <td style="padding:10px;width:25%;vertical-align:middle">
+          <div class="one">
+              <img src='images/ned-logo.png' width="110" class="side-image">
+          </div>
+      </td>
+      <td style="padding:10px;width:75%;vertical-align:top">
+          <papertitle><big><b>NED University of Engineering and Technology</b></big></papertitle>
+          <br>
+          <papertitle style="color:gray"><big>Bachelors of Science </big></papertitle><papertitle><big>Mechanical Engineering</big></papertitle>
+          <br>
+          Dec 2015 - Sep 2019
+          <br>
+          <p align="justify">
+            Assisted research activities in Mechanical Department o NED University under the supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>            
+              <ul>
+                  <li align="justify"><b>Conducted a comparative study to assess different RANS turbulence models for prediction of secondary peek in Nusselt number resulting from a
+                    hydraulic jump in jet impingement cooling.</li>
+                  <li align="justify"><b>Extensively reviewed literature and conducted numerical simulations to asses influence of different types of fins, 
+                    surface topology, pulsating/synthetic jets, and nanofluids on heat transfer characteristics of impinging jets. Collaborate on two research papers based in findings that got published in peer reviewed journals</li>
+                  <li align="justify"><b>Supervised research project of two undergraduate student group.</li>
+              </ul>
+          </p>
+      </td>
+  </tr>
+
+</tbody></table>
+</div>
+<hr class="soft">
+
 
 
         
