--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -177,7 +177,33 @@
     </tr>
 
     <tr>
-      <td style="padding:10px;width:25%;vertical-align:middle">
+      <td style="padding:10px;width:25%;vertical-align:top">
+          <div class="one">
+              <img src='images/tum-logo.png' width="110" class="side-image">
+          </div>
+      </td>
+      <td style="padding:10px;width:75%;vertical-align:top">
+         
+          <papertitle><big><b>Technical University of Munich</b></big></papertitle>
+          <br>
+          <papertitle style="color:gray"><big>Research Assistant (HiWi) </big></papertitle><papertitle><big>- Chair of Computational Modeling and Simulation</big></papertitle>
+          <br>
+          Jul 2021 - Present
+          <br>
+          <p align="justify">
+            Working as HiWi for development of mapping system using LiDAR and RGBD cameras at <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
+              <ul>
+                  <li align="justify">Consolidated workflow for evaluating extrinsic camera parameters for spinning lidar and camera calibration, in absence of reference.</li>
+                  <li align="justify">Implemented libraries for SLAM implementation on LiDAR. Updated code to support Ouster and Robosense LiDAR.</li>
+                  <li align="justify">Working on dockerized implementation of libraries, sensor communication
+                    at distance using nimbro-network, and mobile deployment of mapping system utilizing GO1 robot.</li>
+              </ul>
+          </p>
+      </td>
+  </tr>
+
+    <tr>
+      <td style="padding:10px;width:25%;vertical-align:top">
           <div class="one">
               <img src='images/ned-logo.png' width="110" class="side-image">
           </div>
