--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,13 +62,23 @@
             <td style="padding:2.5%;width:60%;vertical-align:middle">
             
               <br>
-              <p align="justify">I am a Masters student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, part of the <a href="https://www.tum.de/en/">Technical University of Muncih</a>. I am also working as a student research assistant at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on methods for 3D scanning and mapping along with thier implimentation using different robotics systems.
+              <p align="justify">I am a Masters student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
+                part of the <a href="https://www.tum.de/en/">Technical University of Muncih</a>. I am also working as a student research assistant at the 
+                <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on methods for 3D scanning and mapping along with thier 
+                implimentation using different robotics systems.
               </p>
               <p align="justify">
-                From Jul-2020 to Oct-2021, I worked at <a href="https://nust.edu.pk/">National University of Science and Technology</a>, as part of <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a>. I primarily worked on the design and development of drones (fixed wing and vertical take of and landing aerial vehicles) for urban environments. Additionally I also worked on development of models for flight simulator and tuning flight controlled through software-in-loop simulation.
+                From Jul-2020 to Oct-2021, I worked at <a href="https://nust.edu.pk/">National University of Science and Technology</a>, 
+                as part of <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a>. I primarily worked on the design and development of drones 
+                (fixed wing and vertical take of and landing aerial vehicles) for urban environments. 
+                Additionally I also worked on development of models for flight simulator and tuning flight controlled through software-in-loop simulation.
               </p>
               <p align="justify">
-                I have a Bachelors in Mechanical Engineering from <a href="https://www.neduet.edu.pk/">NED University of Engineering and Technology</a>, where I work as a research assistant at Department of Mechanical Engineering under supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>, where I numeriacally investigated different techniques for heat transfer enhancement through jet impingment <a href="https://doi.org/10.1002/htj.21986">[1]</a>, <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>.
+                I have a Bachelors in Mechanical Engineering from <a href="https://www.neduet.edu.pk/">NED University of Engineering and Technology</a>, 
+                I work as a research assistant at Department of Mechanical Engineering under supervision of 
+                <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>, where I numeriacally investigated different techniques 
+                for heat transfer enhancement through jet impingment <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
+                <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank">Email</a> &nbsp;/&nbsp;
@@ -101,7 +111,6 @@
             </div>
         </td>
         <td style="padding:10px;width:75%;vertical-align:top">
-            <!-- <papertitle style="color:gray"><big>Software Development Engineer Intern</big> </papertitle> <papertitle ><big> | Expedia Group</big></papertitle> -->
             <papertitle><big><b>Technical University of Munich</b></big></papertitle>
             <br>
             <papertitle style="color:gray"><big>Masters of Science </big></papertitle><papertitle><big>Computational Mechanics</big></papertitle>
@@ -132,7 +141,8 @@
           Dec 2015 - Sep 2019
           <br>
           <p align="justify">
-              <b>Thesis:</b> Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets <a href="https://doi.org/10.1002/htj.21986">[1]</a>, <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>.              
+              <b>Thesis:</b> Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
+              <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>.              
           </p>
       </td>
   </tr>
@@ -143,10 +153,10 @@
 
 <!-- Experience -->
 
-<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
+<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-experience" id="experience">
   <h2>Experience</h2>
 </button>
-<div id="content-education" class="collapse in">
+<div id="content-experience" class="collapse in">
 
 <table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
 
@@ -184,21 +194,36 @@
       </td>
       <td style="padding:10px;width:75%;vertical-align:top">
          
-          <papertitle><big><b>Technical University of Munich</b></big></papertitle>
+          <papertitle><big><b>National University of Science and Technology</b></big></papertitle>
           <br>
-          <papertitle style="color:gray"><big>Research Assistant (HiWi) </big></papertitle><papertitle><big>- Chair of Computational Modeling and Simulation</big></papertitle>
+          <papertitle style="color:gray"><big>Research Engineer </big></papertitle><papertitle><big>- Integrated Navigation Terrestrial Electromagnetic Lab</big></papertitle>
           <br>
           Jul 2021 - Present
           <br>
           <p align="justify">
-            Working as HiWi for development of mapping system using LiDAR and RGBD cameras at <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
-              <ul>
-                  <li align="justify">Consolidated workflow for evaluating extrinsic camera parameters for spinning lidar and camera calibration, in absence of reference.</li>
-                  <li align="justify">Implemented libraries for SLAM implementation on LiDAR. Updated code to support Ouster and Robosense LiDAR.</li>
-                  <li align="justify">Working on dockerized implementation of libraries, sensor communication
-                    at distance using nimbro-network, and mobile deployment of mapping system utilizing GO1 robot.</li>
+            Contributed to a diverse set of projects as Research Engineer at <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a> at 
+            NUST University.<a href="https://nust.edu.pk/">National University of Science and Technology</a>
+          </p>
+          <p>UAV Design Group:
+              <ul> 
+                  <li align="justify">Created conceptual and preliminary design (aeronautics calculations) for fixed-wing UAVs and VTOL.</li>
+                  <li align="justify">Developed setup for PID tuning of autopilot through SITL (software in the loop) simulation by integrating X-plane simulation models with mission 
+                    planner firmware, for fixed wing UAV.</li>
               </ul>
           </p>
+          <p>Control Group:
+            <ul> 
+                <li align="justify">Created model for VTOL, fixed-wing UAVs in X-plane flight simulator.</li>
+                <li align="justify">Led detail design activity to create CAD assembly in SolidWorks and exporting of manufacturing plans.</li>
+                <li align="justify">Optimized aerodynamics and structural components by conducting CFD, FEA, FSI simulations using ANSYS</li>
+            </ul>
+        </p>
+        <p>Material Testing Group:
+          <ul> 
+              <li align="justify">Collected data obtained from ultrasonic testing of different composite samples with different composite layup schemes, conduct destructive testing 
+                and numeric simulation (ANSYS ACP) of respective samples.</li>
+              <li align="justify">Collaborated in preparation of course work and conducted lab sessions on calibrating and sizing defects through PAUT (phased array ultrasonic testing) using Omni scan MX8.</li>
+          </ul>
       </td>
   </tr>
 
