--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,7 @@
 <table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
 
     <tr>
-        <td style="padding:10px;width:25%;vertical-align:middle">
+        <td style="padding:10px;width:25%;vertical-align:top">
             <div class="one">
                 <img src='images/tum-logo.png' width="110" class="side-image">
             </div>
@@ -128,7 +128,7 @@
     </tr>
 
     <tr>
-      <td style="padding:10px;width:25%;vertical-align:middle">
+      <td style="padding:10px;width:25%;vertical-align:top">
           <div class="one">
               <img src='images/ned-logo.png' width="110" class="side-image">
           </div>
@@ -161,7 +161,7 @@
 <table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
 
     <tr>
-        <td style="padding:10px;width:25%;vertical-align:middle">
+        <td style="padding:10px;width:25%;vertical-align:top">
             <div class="one">
                 <img src='images/tum-logo.png' width="110" class="side-image">
             </div>
@@ -170,12 +170,12 @@
            
             <papertitle><big><b>Technical University of Munich</b></big></papertitle>
             <br>
-            <papertitle style="color:gray"><big>Research Assistant (HiWi) </big></papertitle><papertitle><big>- Chair of Computational Modeling and Simulation</big></papertitle>
+            <papertitle style="color:gray"><big>Research Assistant </big></papertitle><papertitle><big>- Chair of Computational Modeling and Simulation</big></papertitle>
             <br>
             Jul 2021 - Present
             <br>
             <p align="justify">
-              Working as HiWi for development of mapping system using LiDAR and RGBD cameras at <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
+              Working as student research assisting (HiWi) for the development of mapping system using LiDAR and RGBD cameras at <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
                 <ul>
                     <li align="justify">Consolidated workflow for evaluating extrinsic camera parameters for spinning lidar and camera calibration, in absence of reference.</li>
                     <li align="justify">Implemented libraries for SLAM implementation on LiDAR. Updated code to support Ouster and Robosense LiDAR.</li>
@@ -189,7 +189,7 @@
     <tr>
       <td style="padding:10px;width:25%;vertical-align:top">
           <div class="one">
-              <img src='images/tum-logo.png' width="110" class="side-image">
+              <img src='images/nust-logo.png' width="110" class="side-image">
           </div>
       </td>
       <td style="padding:10px;width:75%;vertical-align:top">
@@ -202,7 +202,7 @@
           <br>
           <p align="justify">
             Contributed to a diverse set of projects as Research Engineer at <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a> at 
-            NUST University.<a href="https://nust.edu.pk/">National University of Science and Technology</a>
+            National University of Science and University.
           </p>
           <p>UAV Design Group:
               <ul> 
